--- a/src/main/resources/templates/solution/widget/pc-menu.html
+++ b/src/main/resources/templates/solution/widget/pc-menu.html
@@ -25,7 +25,7 @@
                      <li><a href="/solution/apply" th:if="${session.user?.type != 2}" ><span >등록</span></a></li>
                      <li><a href="/solution/list?min=0&max=10&state=0" ><span>목록</span></a></li>
                      <!-- <li><a href="/pg/myAnswer" th:if="${session.user?.username != null}"><span>내 답변</span></a></li> -->
-                     <li><a href="/pg/help"><span>이용방법</span></a></li>
+                     <li><a href="/help/intro.html"><span>이용방법</span></a></li>
                   </ul>
                </nav>
             </div>
