제목 뒤에 , 오는 이슈 해결

--- a/src/main/resources/templates/solution/apply.html
+++ b/src/main/resources/templates/solution/apply.html
@@ -49,7 +49,7 @@
                     <div class="form-group">
                         <label for="inputTopicTitle">대표 과목</label>
                         <div class="tt-value-wrapper">
-                            <input type="text" name="title" class="form-control" placeholder="과목을 선택하세요" onclick="showSubject()" readonly>
+                            <input type="text" class="form-control" placeholder="과목을 선택하세요" onclick="showSubject()" readonly>
                         </div>
                     </div>
                   </div>
