풀이 정보 리스트 추가

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5820,7 +5820,7 @@ hr + .row-object-inline {
 
 
   .tt-badge.tt-color09 {
-    background-color: #00746b; }
+    background-color: #777da7; }
   .tt-badge.tt-color10 {
     background-color: #f69679; }
   .tt-badge.tt-color11 {
