--- a/src/main/resources/templates/solution/apply.html
+++ b/src/main/resources/templates/solution/apply.html
@@ -201,9 +201,9 @@
                             </div>
                             <div class="form-group">
                                 <select class="form-control" name="language">
-                                    <option value="Select">풀이 언어</option>
-                                    <option value="Value 01">한국어</option>
-                                    <option value="Value 02">English</option>
+                                    <option value="default">풀이 언어</option>
+                                    <option value="korean">한국어</option>
+                                    <option value="english">English</option>
                                 </select>
                             </div>
                         </div>
